syntax = "proto3";
package vertex.requests.administration;

import "types.proto";

message AdminRequest {
    oneof request {
        Promote promote_user = 1;
        Demote demote_user = 2;
        Ban ban_user = 3;
        SearchUser search_user = 4;
        types.None list_all_users = 5;
        Unban unban_user = 6;
        Unlock unlock_user = 7;
        types.None list_all_admins = 8;
    }
}

message AdminResponse {
    oneof response {
        SearchedUsers searched_users = 1;
        Admins admins = 2;
    }
}

message Promote {
    types.UserId user = 1;
    int64 permissions_flags = 2;
}

message Demote {
    types.UserId user = 1;
}

message Ban {
    types.UserId user = 1;
}

message Unban {
    types.UserId user = 1;
}

message Unlock {
    types.UserId user = 1;
}

message SearchUser {
    string name = 1;
}

message SearchedUsers {
    repeated ServerUser users = 1;
}

message ServerUser {
    string username = 1;
    string display_name = 2;
    bool banned = 3;
    bool locked = 4;
    bool compromised = 5;
    bool latest_hash_scheme = 6;
    types.UserId id = 7;
}

message Admins {
    repeated Admin admins = 1;
}

message Admin {
    string username = 1;
    types.UserId id = 2;
    int64 permissions_flags = 3;
}
